--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -12,10 +12,10 @@ html
 		div.wrapper.container-fluid
 			div#content
 				nav#toptoptop.navbar.navbar-expand-lg
-					a.navbar-brand.override(href='/') zKillboard
+					a.navbar-brand.override(href='/')= 'zkillboard.dev (alpha)'
 					ul.navbar-nav.mr-auto
 					form.form-inline.my-2.my-lg-0
-						input.form-control.mr-sm-2(type='search' placeholder='Search' aria-label='Search')
+						input.form-control.mr-sm-2(type='Search' placeholder='Not yet implemented' aria-label='Not yet implemented')
 				hr
 				div#overview
 					div.row
