--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -60,8 +60,8 @@ html
 					div.clearfix
 					div#overview-menu
 					div.row
-						div#overview-killmails.col-6
-						div#overview-weekly.col-6
+						div#overview-killmails
+						div#overview-weekly
 				div#killmail.row
 				div#other.row
 		div.clearfix.push
