--- a/www/views/killmail-row.pug
+++ b/www/views/killmail-row.pug
@@ -7,54 +7,54 @@ include mixins.pug
 -var time = json.rawmail.killmail_time.replace("T", "<br/>").replace("Z", "");
 
 div.killrow(victims=json.victims)
-	ul.image
-		-var url = '/killmail/' + json.rawmail.killmail_id
-		-var image = 'https://images.evetech.net/types/' + json.rawmail.victim.ship_type_id + '/icon?size=' + 64
-		-var name = 'Killmail ' + json.rawmail.killmail_id
-		+tag_image('span', url, image, name, 64)
-	ul.info1
-		li
-			| !{time}
-		li.fnumber= json.killmail.total_value
-	ul.info2
-		+type_id_link('li', 'system', json.rawmail.solar_system_id, json.rawmail.solar_system_name)
-		+type_id_link('li', 'constellation', json.rawmail.constellation_id, json.rawmail.constellation_name)
-		+type_id_link('li', 'region', json.rawmail.region_id, json.rawmail.region_name)
-	div.clearfix.d-block.d-lg-none
-	ul.image
-		if json.rawmail.victim.alliance_id > 0
-			+alli_image('li', json.rawmail.victim.alliance_id, json.rawmail.victim.alliance_name, 64)
-		else if json.rawmail.victim.corporation_id > 1999999 || parseInt(json.rawmail.final_blow.character_id) == 0
-			+corp_image('li', json.rawmail.victim.corporation_id, json.rawmail.victim.corporation_name, 64)
-		else
-			+char_image('li', json.rawmail.victim.character_id, json.rawmail.victim.character_name, 64)
-	ul.victim
-		li
-			+char_id_link('span', json.rawmail.victim.character_id, json.rawmail.victim.character_name)
-			if json.rawmail.victim.character_id > 0
-				|   -  
-			+type_id_link('span', 'item', json.rawmail.victim.ship_type_id, json.rawmail.victim.ship_type_name)
-		+corp_id_link('li', json.rawmail.victim.corporation_id, json.rawmail.victim.corporation_name)
-		+alli_id_link('li', json.rawmail.victim.alliance_id, json.rawmail.victim.alliance_name)
-	div.clearfix.d-block.d-lg-none
-	ul.image
-		if json.rawmail.final_blow.alliance_id > 0
-			+alli_image('li', json.rawmail.final_blow.alliance_id, json.rawmail.final_blow.alliance_name, 64)
-		else if json.rawmail.final_blow.corporation_id > 1999999 || parseInt(json.rawmail.final_blow.character_id) == 0
-			+corp_image('li', json.rawmail.final_blow.corporation_id, json.rawmail.final_blow.corporation_name, 64)
-		else if json.rawmail.final_blow.character_id > 0
-			+char_image('li', json.rawmail.final_blow.character_id, json.rawmail.final_blow.character_name, 64)
-		else
-			+type_image('li', json.rawmail.final_blow.ship_type_id, json.rawmail.final_blow.ship_type_name, 64)
-	ul.finalblow
-		- var tag
-		- if (json.killmail.stats == false) tag = 'nostats'
-		- else if (json.killmail.labels.indexOf('solo') != -1) tag = 'solo'
-		- else tag = ' (' + json.killmail.involved_cnt + ')'
-		+char_id_link('li', json.rawmail.final_blow.character_id, json.rawmail.final_blow.character_name, tag)
-		+corp_id_link('li', json.rawmail.final_blow.corporation_id, json.rawmail.final_blow.corporation_name)
-		+alli_id_link('li', json.rawmail.final_blow.alliance_id, json.rawmail.final_blow.alliance_name)
-		if (!(json.rawmail.final_blow.character_id > 0 || json.rawmail.final_blow.corporation_id > 0 || json.rawmail.final_blow.alliance_id > 0)) 
-			+type_id_link('li', 'type', json.rawmail.final_blow.ship_type_id, json.rawmail.final_blow.ship_type_name)
+	div.killrowblock
+		ul.image
+			-var url = '/killmail/' + json.rawmail.killmail_id
+			-var image = 'https://images.evetech.net/types/' + json.rawmail.victim.ship_type_id + '/icon?size=' + 64
+			-var name = 'Killmail ' + json.rawmail.killmail_id
+			+tag_image('span', url, image, name, 64)
+		ul.info1
+			li
+				| !{time}
+			li.fnumber= json.killmail.total_value
+		ul.info2
+			+type_id_link('li', 'system', json.rawmail.solar_system_id, json.rawmail.solar_system_name)
+			+type_id_link('li', 'constellation', json.rawmail.constellation_id, json.rawmail.constellation_name)
+			+type_id_link('li', 'region', json.rawmail.region_id, json.rawmail.region_name)
+	div.killrowblock
+		ul.image
+			if json.rawmail.victim.alliance_id > 0
+				+alli_image('li', json.rawmail.victim.alliance_id, json.rawmail.victim.alliance_name, 64)
+			else if json.rawmail.victim.corporation_id > 1999999 || parseInt(json.rawmail.final_blow.character_id) == 0
+				+corp_image('li', json.rawmail.victim.corporation_id, json.rawmail.victim.corporation_name, 64)
+			else
+				+char_image('li', json.rawmail.victim.character_id, json.rawmail.victim.character_name, 64)
+		ul.victim
+			li
+				+char_id_link('span', json.rawmail.victim.character_id, json.rawmail.victim.character_name)
+				if json.rawmail.victim.character_id > 0
+					|   -  
+				+type_id_link('span', 'item', json.rawmail.victim.ship_type_id, json.rawmail.victim.ship_type_name)
+			+corp_id_link('li', json.rawmail.victim.corporation_id, json.rawmail.victim.corporation_name)
+			+alli_id_link('li', json.rawmail.victim.alliance_id, json.rawmail.victim.alliance_name)
+	div.killrowblock
+		ul.image
+			if json.rawmail.final_blow.alliance_id > 0
+				+alli_image('li', json.rawmail.final_blow.alliance_id, json.rawmail.final_blow.alliance_name, 64)
+			else if json.rawmail.final_blow.corporation_id > 1999999 || parseInt(json.rawmail.final_blow.character_id) == 0
+				+corp_image('li', json.rawmail.final_blow.corporation_id, json.rawmail.final_blow.corporation_name, 64)
+			else if json.rawmail.final_blow.character_id > 0
+				+char_image('li', json.rawmail.final_blow.character_id, json.rawmail.final_blow.character_name, 64)
+			else
+				+type_image('li', json.rawmail.final_blow.ship_type_id, json.rawmail.final_blow.ship_type_name, 64)
+		ul.finalblow
+			- var tag
+			- if (json.killmail.stats == false) tag = 'nostats'
+			- else if (json.killmail.labels.indexOf('solo') != -1) tag = 'solo'
+			- else tag = ' (' + json.killmail.involved_cnt + ')'
+			+char_id_link('li', json.rawmail.final_blow.character_id, json.rawmail.final_blow.character_name, tag)
+			+corp_id_link('li', json.rawmail.final_blow.corporation_id, json.rawmail.final_blow.corporation_name)
+			+alli_id_link('li', json.rawmail.final_blow.alliance_id, json.rawmail.final_blow.alliance_name)
+			if (!(json.rawmail.final_blow.character_id > 0 || json.rawmail.final_blow.corporation_id > 0 || json.rawmail.final_blow.alliance_id > 0)) 
+				+type_id_link('li', 'type', json.rawmail.final_blow.ship_type_id, json.rawmail.final_blow.ship_type_name)
 	div.clearfix
-	hr.d-block.d-lg-none
