--- a/www/views/killmail.pug
+++ b/www/views/killmail.pug
@@ -113,5 +113,5 @@ div.clearfix
 div.row
 	- var rawmail = JSON.stringify(json.rawmail, undefined, 4)
 	- var killmail = JSON.stringify(json.killmail, undefined, 4)
-	- //pre !{rawmail}
-	- //pre !{killmail}
+	pre !{rawmail}
+	pre !{killmail}
