--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -6,6 +6,7 @@ html
 		title= json.title
 		link(rel='stylesheet' href='/css/cyborg.css')
 		script(src='https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.0.0/dist/lazyload.min.js')
+		link(rel='stylesheet' href='/css/spinner.css?v=' + server_started)
 		link(rel='stylesheet' href='/css/z.css?v=' + server_started)
 
 	body
