--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -38,7 +38,7 @@ html
 											th Alltime
 											td#alltime-kills.clearbeforeload.green(format='integer')
 											td#alltime-isk-killed.clearbeforeload.green(format='fnumber')
-											td.clearbeforeload
+											td#alltime-rank.clearbeforeload(format='integer')
 											td#alltime-lost.clearbeforeload.red(format='integer')
 											td#alltime-isk-lost.clearbeforeload.red(format='fnumber')
 											td#alltime-eff.clearbeforeload
@@ -46,7 +46,7 @@ html
 											th 90 Days
 											td#recent-kills.clearbeforeload.green(format='integer')
 											td#recent-isk-killed.clearbeforeload.green(format='fnumber')
-											td.clearbeforeload
+											td#recent-rank.clearbeforeload(format='integer')
 											td#recent-lost.clearbeforeload.red(format='integer')
 											td#recent-isk-lost.clearbeforeload.red(format='fnumber')
 											td#recent-eff.clearbeforeload
@@ -54,7 +54,7 @@ html
 											th 7 Days
 											td#week-kills.clearbeforeload.green(format='integer')
 											td#week-isk-killed.clearbeforeload.green(format='fnumber')
-											td
+											td#week-rank.clearbeforeload(format='integer')
 											td#week-lost.clearbeforeload.red(format='integer')
 											td#week-isk-lost.clearbeforeload.red(format='fnumber')
 											td#week-eff.clearbeforeload
