--- a/www/views/information.pug
+++ b/www/views/information.pug
@@ -27,4 +27,4 @@ ul#info-box
 			+info_row_a('System:', 'system', json.solar_system_id, json.solar_system_name)
 			+info_row_a('Constellation:', 'constellation', json.constellation_id, json.constellation_name)
 			+info_row_a('Region:', 'region', json.region_id, json.region_name)
-			+info_row('Security:', json.security_status, 'number')
+			+info_row('Security:', json.security_status, 'decimal')
