--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -26,64 +26,56 @@ html
 								table#stats-table.table.table-hover.table-sm.table-responsive
 									thead
 										tr
-											th
+											th.timespan Days
 											th Killed
 											th ISK
 											th Rank
 											th Lost
 											th ISK
-											th Eff. %
+											th Eff
+											th Snuggly
+											th Solo
+											th Inv Avg
 											th Score
 									tbody
 										tr
-											th Alltime
+											th ∞
 											td#alltime-kills.clearbeforeload.green(format='integer')
 											td#alltime-isk-killed.clearbeforeload.green(format='fnumber')
 											td#alltime-rank.clearbeforeload(format='integer')
 											td#alltime-lost.clearbeforeload.red(format='integer')
 											td#alltime-isk-lost.clearbeforeload.red(format='fnumber')
 											td#alltime-eff.clearbeforeload(format='percentage')
+											td#alltime-dangerlevel.clearbeforeload(format='percentage')
+											td#alltime-solopct.clearbeforeload(format='percentage')
+											td#alltime-avg-inv-cnt.clearbeforeload(format='decimal')
 											td#alltime-zscore.clearbeforeload(format='percentage')
 										tr
-											th 90 Days
+											th 90
 											td#recent-kills.clearbeforeload.green(format='integer')
 											td#recent-isk-killed.clearbeforeload.green(format='fnumber')
 											td#recent-rank.clearbeforeload(format='integer')
 											td#recent-lost.clearbeforeload.red(format='integer')
 											td#recent-isk-lost.clearbeforeload.red(format='fnumber')
 											td#recent-eff.clearbeforeload(format='percentage')
+											td#recent-dangerlevel.clearbeforeload(format='percentage')
+											td#recent-solopct.clearbeforeload(format='percentage')
+											td#recent-avg-inv-cnt.clearbeforeload(format='decimal')
 											td#recent-zscore.clearbeforeload(format='percentage')
 										tr
-											th 7 Days
+											th 7
 											td#week-kills.clearbeforeload.green(format='integer')
 											td#week-isk-killed.clearbeforeload.green(format='fnumber')
 											td#week-rank.clearbeforeload(format='integer')
 											td#week-lost.clearbeforeload.red(format='integer')
 											td#week-isk-lost.clearbeforeload.red(format='fnumber')
 											td#week-eff.clearbeforeload(format='percentage')
+											td#week-dangerlevel.clearbeforeload(format='percentage')
+											td#week-solopct.clearbeforeload(format='percentage')
+											td#week-avg-inv-cnt.clearbeforeload(format='decimal')
 											td#week-zscore.clearbeforeload(format='percentage')
-										tr
-											td(colspan='4')
-												div.progress
-													div.hidebeforeload#alltime-dangerlevel.progress-bar.bg-red(role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style='width: 0%;')
-													div.hidebeforeload#alltime-dangerlevel-inverse.progress-bar.bg-green(role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style='width: 0%;')
-											td(colspan='4')
-												div.progress
-													div.hidebeforeload#alltime-solopct-inverse.progress-bar.bg-red(role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style='width: 0%;')
-													div.hidebeforeload#alltime-solopct.progress-bar.bg-green(role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style='width: 0%;') 
-										tr
-											td.red.text-left(colspan='2') Dangerous
-											td.green.text-right(colspan='2') Snuggly
-											td(colspan='2')
-												span#alltime-avg-inv-cnt.clearbeforeload(format='decimal')
-												span &nbsp; Avg. Inv. Cnt
-											td(colspan='2')
-												span#alltime-solo-kills.clearbeforeload(format='integer')
-												span &nbsp;Solo
+										
 
-										-//tr
-											-//td.clearbeforeload#alltime-dangerlevel(format='percentage' colspan='4')
-											-//td.clearbeforeload#alltime-solopct(format='percentage' colspan='4')
 					div.clearfix
 					div#overview-menu
 					div.row.d-none
